[1;36m==> modified : Lab-15/README.md [0m     [1;36m==> modified : Lab-15/daemonset.yaml [0m

--- a/Lab-15/daemonset.yaml
+++ b/Lab-15/daemonset.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: privileged-daemon
-  namespace: lab15-daemonset
+  namespace: lab15-daemonset-ozil
   labels:
     app: privileged-daemon
 spec:
