--- a/Lab-16/openshift/backend_deployment_root.yaml
+++ b/Lab-16/openshift/backend_deployment_root.yaml
@@ -14,28 +14,24 @@ spec:
       labels:
         app: backend
     spec:
+      # Service account with SCC binding
+      serviceAccountName: three-tier-app-sa
       # Disable service account token mounting for security
       automountServiceAccountToken: false
-      # OpenShift security context
+      # Allow root access
       securityContext:
-        runAsNonRoot: true
-        runAsUser: 1001
-        fsGroup: 1001
+        runAsUser: 0  # Root user
+        fsGroup: 0
         seccompProfile:
           type: RuntimeDefault
       containers:
       - name: backend
         image: mmsaeed509/go-app:v1
-        # OpenShift container security context
+        # Container security context for root access
         securityContext:
-          allowPrivilegeEscalation: false
-          runAsNonRoot: true
-          runAsUser: 1001
+          runAsUser: 0  # Root user
           seccompProfile:
             type: RuntimeDefault
-          capabilities:
-            drop:
-            - ALL
         ports:
         - containerPort: 8000
           protocol: TCP
@@ -65,7 +61,7 @@ spec:
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 5
-        # Resource limits for OpenShift
+        # Resource limits
         resources:
           requests:
             memory: "64Mi"
