--- a/Lab-16/openshift/proxy_deployment.yaml
+++ b/Lab-16/openshift/proxy_deployment.yaml
@@ -19,6 +19,8 @@ spec:
         runAsNonRoot: true
         runAsUser: 1001
         fsGroup: 1001
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: nginx
         image: mmsaeed509/go-app-nginx:v3
@@ -27,6 +29,8 @@ spec:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
           runAsUser: 1001
+          seccompProfile:
+            type: RuntimeDefault
           capabilities:
             drop:
             - ALL
